--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -44,8 +44,8 @@ header {
 
 		img {
 			display: block;
-			min-width: 250px;
-			height: 100%;
+			width: auto;
+			min-height: 150px;
 		}
 	}
 }
