--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -37,6 +37,7 @@ header {
 	.company-name {
 		font-size: 1.7em;
 		line-height: 0;
+		min-height: 100px;
 
 		a {
 			display: inline-block;
@@ -44,8 +45,7 @@ header {
 
 		img {
 			display: block;
-			min-width: 250px;
-			height: auto;
+			width: auto;
 		}
 	}
 }
